[BE] refactor: Swagger JWT 테스트를 위한 코드 리팩토링 (#53)
- 기존에는 Fiber App을 생성, 실행하는 코드를 app/root.go에 뒀는데, gofiber/swagger가 main.go 말고는 루트를 제대로 못 찾는 문제가 있었음. 그래서 ApiKeyAuth 설정을 해도 swagger docs에서 authorization 기능이 활성화되지 않음.
- Fiber app 생성 코드를 app/root.go에서 main.go로 옮김
