# backend/app/controllers/bookmark.go
@@ -19,11 +19,12 @@ import (
 //	@Tags			bookmark
 //	@Accept			json
 //	@Produce		json
+//	@Security		ApiKeyAuth
 //	@Param			params	body		models.AddBookmarkRequest	true	"body params"
 //	@Success		201		{object}	models.AddBookmarkResponse
 //	@Failure		400		{object}	models.AddBookmarkWithErrorResponse
 //	@Failure		500		{object}	models.AddBookmarkWithErrorResponse
-//	@Router			/api/v1/bookmark [post]
+//	@Router			/bookmark [post]
 func AddBookmarkHandler(c *fiber.Ctx) error {
 	params := &models.AddBookmarkRequest{}
 	err := c.BodyParser(params)
@@ -83,12 +84,13 @@ func AddBookmarkHandler(c *fiber.Ctx) error {
 //	@Summary	특정 유저가 저장한 북마크 중 id가 일치하는 북마크 상세 정보 1개를 반환
 //	@Tags		bookmark
 //	@Produce	json
+//	@Security	ApiKeyAuth
 //	@Param		id	path		uint	true	"Bookmark ID"
 //	@Success	200	{object}	models.GetBookmarkByIdResponse
 //	@Failure	400	{object}	models.GetBookmarkByIdWithErrorResponse
 //	@Failure	401	{object}	models.GetBookmarkByIdWithErrorResponse
 //	@Failure	500	{object}	models.GetBookmarkByIdWithErrorResponse
-//	@Router		/api/v1/bookmark/{id} [get]
+//	@Router		/bookmark/{id} [get]
 func GetBookmarkByIdHandler(c *fiber.Ctx) error {
 	params := &models.GetBookmarkByIdRequest{}
 	err := c.ParamsParser(params)
@@ -151,13 +153,14 @@ func GetBookmarkByIdHandler(c *fiber.Ctx) error {
 //	@Summary	특정 유저가 저장한 북마크 중 offset부터 limit까지 목록을 반환
 //	@Tags		bookmark
 //	@Produce	json
+//	@Security	ApiKeyAuth
 //	@Param		offset	query		int	false	"특정 id부터 조회할 때 사용"
 //	@Param		limit	query		int	false	"limit 개수만큼 조회할 때 사용"
 //	@Success	200		{object}	models.GetAllBookmarksResponse
 //	@Failure	400		{object}	models.GetAllBookmarksWithErrorResponse
 //	@Failure	401		{object}	models.GetAllBookmarksWithErrorResponse
 //	@Failure	500		{object}	models.GetAllBookmarksWithErrorResponse
-//	@Router		/api/v1/bookmark [get]
+//	@Router		/bookmark [get]
 func GetAllBookmarksHandler(c *fiber.Ctx) error {
 	params := &models.GetAllBookmarksRequest{}
 	err := c.QueryParser(params)
