# backend/docs/swagger.json
@@ -1,10 +1,16 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "Nutbooks API documentation",
+        "title": "NutBooks API",
+        "contact": {
+            "email": "cheesecat47@gmail.com"
+        },
+        "version": "1.0.0"
     },
+    "basePath": "/api/v1",
     "paths": {
-        "/api/v1/": {
+        "/": {
             "get": {
                 "tags": [
                     "/"
@@ -17,7 +23,7 @@
                 }
             }
         },
-        "/api/v1/auth/login": {
+        "/auth/login": {
             "post": {
                 "description": "로그인 성공 시 200 \"Success\" 메시지 반환.\n이메일 문제 시 400 \"Email not found\", 비밀번호 문제 시 \"Failed to login\" 반환.\n로그인 중 서버 문제 발생 시 \"Failed to check ***\" 반환.",
                 "produces": [
@@ -51,6 +57,12 @@
                             "$ref": "#/definitions/models.LogInWithErrorResponse"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.LogInWithErrorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -60,8 +72,13 @@
                 }
             }
         },
-        "/api/v1/bookmark": {
+        "/bookmark": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -96,6 +113,12 @@
                             "$ref": "#/definitions/models.GetAllBookmarksWithErrorResponse"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.GetAllBookmarksWithErrorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -105,6 +128,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "새 북마크를 DB에 저장. 북마크 링크는 필수 데이터이고, 그 외는 옵셔널.",
                 "consumes": [
                     "application/json"
@@ -149,8 +177,13 @@
                 }
             }
         },
-        "/api/v1/bookmark/{id}": {
+        "/bookmark/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -180,6 +213,12 @@
                             "$ref": "#/definitions/models.GetBookmarkByIdWithErrorResponse"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.GetBookmarkByIdWithErrorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -189,8 +228,13 @@
                 }
             }
         },
-        "/api/v1/user": {
+        "/user": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -221,6 +265,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.GetAllUsersWithErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/models.GetAllUsersWithErrorResponse"
                         }
@@ -277,7 +327,7 @@
                 }
             }
         },
-        "/api/v1/user/check-email": {
+        "/user/check-email": {
             "get": {
                 "description": "입력한 이메일을 사용하는 유저가 있다면 Body의 Message로 True 반환, 없다면 False 반환.",
                 "produces": [
@@ -318,8 +368,13 @@
                 }
             }
         },
-        "/api/v1/user/{id}": {
+        "/user/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -345,6 +400,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.GetUserByIdWithErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/models.GetUserByIdWithErrorResponse"
                         }
@@ -736,12 +797,13 @@
             "type": "object",
             "properties": {
                 "data": {
-                    "description": "ID가 일치하는 비밀번호 정보",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/models.Password"
+                    "description": "로그인 성공 시 토큰 반환",
+                    "type": "object",
+                    "properties": {
+                        "access_token": {
+                            "type": "string"
                         }
-                    ]
+                    }
                 },
                 "error": {
                     "type": "boolean"
@@ -760,33 +822,6 @@
                 },
                 "message": {
                     "type": "string"
-                }
-            }
-        },
-        "models.Password": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "password": {
-                    "description": "영문 + 숫자 8-12자리",
-                    "type": "string"
-                },
-                "salt": {
-                    "type": "integer"
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "userID": {
-                    "type": "integer"
                 }
             }
         },
@@ -814,6 +849,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "description": "AccessToken",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
